@@ -1,0 +1,19 @@
+package DZT;
+
+=head1 NAME
+
+DZT - Dist::Zilla test
+
+=head1 DESCRIPTION
+
+blah blah
+
+=head1 EXAMPLE
+
+here is one example:
+
+# EXAMPLE: example/foo.txt
+
+=cut
+
+1;
