@@ -12,6 +12,7 @@ travis_status = 1
 [RemovePrereqs]
 remove = strict
 remove = warnings
+remove = List::Util
 
 ; comes with Dist::Zilla
 remove = Dist::Zilla::Role::FileFinderUser
